# super-s3-app

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.claude/: ralph-loop.local.md
.github/workflows/: release.yml
src/: App.tsx  api.ts  index.css  types.ts  useUpdateCheck.ts  utils.ts
src-tauri/: Cargo.toml  tauri.conf.json  解决问题，中间有不确定的内容可联网检索确认，直到符合最佳实践
src-tauri/.claude/: ralph-loop.local.md
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  s3client.rs  types.rs
src-tauri/src/commands/: accounts.rs  buckets.rs  config.rs  metadata.rs  mod.rs  objects.rs  settings.rs  transfer.rs  update.rs
src/components/: ConfigModal.tsx  DetailDrawer.tsx  ObjectBrowser.tsx  SettingsModal.tsx  Sidebar.tsx  TransferPanel.tsx  TransferSettingsModal.tsx
